Inserindo imagens, e alinhamento do menu

--- a/css/plugins.css
+++ b/css/plugins.css
@@ -15,8 +15,8 @@
 	width: 150px;
 }
 .load-complete .ball-clip-rotate > div {
-	border-color: #ff9c00 #ff9c00 transparent;
-	background-color: #ff9c00;
+	border-color: #FF0000 #FF0000 transparent;
+	background-color: #FF0000;
 	margin: 0 auto;
 	display: block;
 	top: 50%;
