--- a/style.css
+++ b/style.css
@@ -62,7 +62,10 @@
 
 /* * Body */
 .container{
-    max-width: 950px;
+    max-width: 992px;
+}
+.corAmarelo{
+    color: #ff9c00!important;
 }
 
 body {
@@ -376,10 +379,10 @@ main,footer {
     text-align: left;
 }
 .footer-main .about-widget a.locate-us {
-    background-color: #FF0000;
+    background-color: #ff9c00;
     border-radius: 50px;
-    border: 1px solid #FF0000;
-    color: #121212;
+    border: 1px solid #ff9c00;
+    color: #FF0000;
     display: inline-block;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
@@ -400,7 +403,7 @@ main,footer {
 }
 
 .footer-main .ftr-widget h3 {
-    color: #fff;
+    color: #ff9c00;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     font-weight: 600;
@@ -488,6 +491,8 @@ main,footer {
     margin-top: 70px;
     position: relative;
     padding: 30px 0;
+    text-align: center;
+
 }
 .footer-main .bottom-footer p {
     color: #ccc;
@@ -497,6 +502,7 @@ main,footer {
     letter-spacing: 0.56px;
     margin-bottom: 0;
     position: relative;
+    letter-spacing: 5px;
     z-index: 1;
 }
 .footer-main .bottom-footer .terms-policy {
@@ -602,7 +608,7 @@ main,footer {
     text-transform: uppercase;
 }
 .section-header p {
-    color: #777;
+    color: #000;
     font-family: 'Lato', sans-serif;
     font-size: 14px;
     padding: 0 15px;
@@ -610,6 +616,34 @@ main,footer {
     line-height: 26px;
     margin-bottom: 0;
     margin-top: 25px;
+}
+
+/*instagram*/
+.instafeed {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.slick-slide {
+    margin: 0;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+.slick-prev{
+    left: 5px;
+    z-index: 5;
+}
+.slick-next{
+    right: 5px;
+}
+
+.slick-prev:before{
+    color: var(--cor);
+}
+.slick-next:before {
+    color: var(--cor);
 }
 
 /*-----------------------------------------
