--- a/style.css
+++ b/style.css
@@ -263,6 +263,7 @@ main,footer {
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     letter-spacing: 0.6px;
+    margin: 0;
 }
 .top-header .our-contacts p i {
     color: #FF0000;
@@ -286,7 +287,7 @@ main,footer {
     padding-top: 40px;
 }
 .top-header .header-social {
-    padding-top: 45px;
+    padding-top: 80px;
     text-align: right;
 }
 .top-header .header-social ul {
@@ -315,7 +316,7 @@ main,footer {
 .top-header .cart > li > a {
     background-color: #FF0000;
     border: 1px solid #FF0000;
-    padding: 10px 40px;
+    padding: 5px 20px;
     font-size: 12px;
     font-weight: 600;
     font-family: 'Poppins', sans-serif;
@@ -343,7 +344,7 @@ main,footer {
     padding-top: 40px;
 }
 .footer-main {
-    background-image: url("images/footer-bg.jpg");
+    background-image: url("images/banner-3.png");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -640,10 +641,10 @@ main,footer {
 }
 
 .slick-prev:before{
-    color: var(--cor);
+    color: #FF0000;
 }
 .slick-next:before {
-    color: var(--cor);
+    color: #FF0000;
 }
 
 /*-----------------------------------------
