--- a/style.css
+++ b/style.css
@@ -70,7 +70,24 @@
 .mensagem-alerta{
     padding-top: 10px!important;
 }
+#lightbox .modal-content {
+    display: inline-block;
+    text-align: center;   
+}
 
+#lightbox .close {
+    opacity: 1;
+    color: rgb(255, 255, 255);
+    background-color: rgb(25, 25, 25);
+    padding: 5px 8px;
+    border-radius: 30px;
+    border: 2px solid rgb(255, 255, 255);
+    position: absolute;
+    top: -15px;
+    right: -55px;
+
+    z-index:1032;
+}
 .footer-main .order-box .order-form .form-control,
 .footer-main .order-box .order-form  select {
     border-color: #bfbfbf;
