--- a/style.css
+++ b/style.css
@@ -70,9 +70,11 @@
 .mensagem-alerta{
     padding-top: 10px!important;
 }
+
 #lightbox .modal-content {
     display: inline-block;
-    text-align: center;   
+    text-align: center;
+    top: 15%;
 }
 
 #lightbox .close {
@@ -782,7 +784,9 @@ main,footer {
 
 /* - min-width: 768 to max-width: 991 */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-
+    .carousel-inner>.item>img{
+        height: 360px;
+    }
 }
 
 /* - max-width: 767 */
@@ -796,6 +800,10 @@ main,footer {
     .top-header .cart > li > a {
         padding: 10px 28px;
     }
+    .carousel-inner>.item>img{
+        height: 260px;
+    }
+
 }
 
 /* -  max-width: 639 */
@@ -816,7 +824,9 @@ main,footer {
 
 /* -  max-width: 479 */
 @media (max-width: 479px) {
-
+    .carousel-inner>.item>img{
+        height: 200px;
+    }
 }
 
 div#features-section {
